task jpa repository and liquibase

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,22 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:bookDB
-    driver-class-name: org.h2.Driver
+    url:  jdbc:postgresql://localhost:5432/bookshelf
     username: user
-    password: pass
-  #jpa:
-    #database-platform: org.hibernate.dialect.H2Dialect
-  h2:
-    console:
-      enabled: true
+    password: password
+     
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: none
+  sql:
+    init:
+      mode: never
+      
+  liquibase:
+    enabled: true
+    change-log: classpath:/liquibase/changelog.xml
+    drop-first: true
       
 logging:
   pattern:
