--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,15 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -79,6 +84,22 @@
 
 	<build>
 		<plugins>
+		   <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.6.2</version>
+                <configuration>
+                    <url>jdbc:postgresql://localhost:5432/bookshelf</url>
+                    <driver>org.postgresql.Driver</driver>
+                    <username>user</username>
+                    <password>password</password>
+                    <changeLogFile>src/main/resources/liquibase/changelog.xml</changeLogFile>
+                    <logging>info</logging>
+                    <verbose>false</verbose>
+                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                </configuration>
+            </plugin>
+		  
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
