--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,16 @@ spring:
     enabled: true
     change-log: classpath:/liquibase/changelog.xml
     drop-first: true
-      
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            # client mit redirect-uri *:8080 und *:8081
+            client-id: 148971885543-co9dv22tjamh7amdonnqod69dsd721rp.apps.googleusercontent.com
+            client-secret: mXAtT6Ze7M7mK_KCb5VEyJSY       
+
 logging:
   pattern:
     console: "%d{HH:mm:ss} %highlight(%-5level) %highlight(%48.48logger) - %msg%n"
